keycloak/k8s-manifest/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  serviceName: 'keycloak-headless'
  replicas: 3
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
      - name: keycloak-tls-certificates
        secret:
          secretName: willbridcom
      containers:
        - name: keycloak
          image: 'quay.io/keycloak/keycloak:25.0.2'
          args:
            - '-Djgroups.dns.query=keycloak-headless.keycloak'
            - '--verbose'
            - start
          ports:
            - name: https-svc
              containerPort: 8443
              protocol: TCP
            - name: http-svc
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 9000
              protocol: TCP
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 1700Mi
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 600
          volumeMounts:
          - name: keycloak-tls-certificates
            mountPath: /mnt/certificates
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
