keycloak/k8s-manifest/service-headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-headless
  namespace: keycloak
  labels:
    app: keycloak
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: http-svc
    protocol: TCP
    port: 8080
    targetPort: http-svc
  selector:
    app: keycloak
