keycloak/k8s-manifest/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http-svc
    protocol: TCP
    port: 8080
    targetPort: http-svc
  type: ClusterIP
  selector:
    app: keycloak
