keycloak/k8s-manifest/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  tls:
  - hosts:
    - auth.willbrid.com
    secretName: willbridcom
  rules:
    - host: auth.willbrid.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
